--- a/style.css
+++ b/style.css
@@ -73,7 +73,7 @@ main {
   text-align: center;
 
   background: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)),
-    url(https://photos.google.com/photo/AF1QipPx4vcJ3UtgIMPh1KiHZrNttouEKf29THB_DhK5);
+    url(https://lh3.googleusercontent.com/pw/AL9nZEUI5Stgc8mL56UC2JeMjZTh94Zht25u2C8KCqg0jHyLHx-_S1ncZLW0bSJl3cIQqsTiYkhc3R4TJ8_aR4o-f98r6YOySyLHnNvGD6BZ918Hfacsbn5ygyg7LBmEmfJYawxP9N-k8BFn2xEaEJlW-c0L1bZpVwyojGKakbeCxwzEfMtoZJXXYXMA3sfgXSI55v32P-VmQ_SDzy_qReMYaiICG_hk09EPBX7UkR6AHF7jYx4dcvlXYhSNSUDLDjrYLcYwTsqcrhkP4w5KJKJJ2p2uQZ9h8YcsXy8dsQHYbMNw1bxpXEq0tnTXNF-TOSqp7PwfV0i0a_6PscIniMhTHjYoR8fhm4Gb7ZGoDYNFRj26XxTuSFB2YvE9xkjm_k7pMeIMzBqQb0ng9RVGmfw7oWM_Bs9QdBnDDkXemnFS85YH7NAslNEC-ylSu3DWgOXYrKJ3Xpx-Hs73YWE0JaDj9KAm7qrfeLZn2WhbIabHu-Rt0ER5tt4gFvcRd9MoxnmLu83z2BaIzCOQxE7AyvhBMlhHjxbWXcHJkFrpJwI2wHkzZ8B57wIAwOcA06j8Pe57m-hj3CE70tW0HlMFaIMnCwVJw_Pf5u3a2dFyqSAyfkZnmFoFMOQccvdlS3dHS116Unr6a1h3EL9dnf6OXIwNq3-_z5ulUjFLmHei_FeyOxcHa9kh48beNwpvqCms0E4RZugXLxl5da6FejQJSSaf-POHFJlz8TDPFQCidaC6MS5Onu63tgi61HARRl__egvl9M6rdVJM3vOKo6eZmLbjOH3MKZgIpCg3VN-9rdRMvz3MC_E6EhPyAo-lhwxREeYn3Ib7kvstp0N3oK6mLZjwG4OmzQ89ycC0Vaopvobp9JQQwDzty8HlYo4pscp5E8t-O0r2l4e0O2R2kjQnr9FgWAug7igmD1V0rlgx0dpH6CVkon5do5e4ZbEGpe5xA5Z554uWkt73UIc=w301-h617-no?authuser=0&authuser=0);
     
     
   background-size: cover;
@@ -120,7 +120,7 @@ main {
 
 .back-card {
   background: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)),
-  url(https://photos.google.com/photo/AF1QipNbJLLqYWEVzVHTsgIrCi-nqdzq2ZwkNCk_m3CO);
+  url(https://lh3.googleusercontent.com/fDC_EHaQ3IuGgiMeQpxTbz9wJU9osN_ShZNdOkL3rFYbWvAoPAEdz6BAY0higPW5rhVYoqOqZwiuS1fNItDyeYfDOAk4BjsWByONoKE-uPC-azyTTEUCYPC3SQvU5gsegcCXf7LwMDWWHawz8P_FeuzfTXu0tzosM9UYfsasotmCK_M5YH8UfIdDhYmrONXlGU9jrvnAEqleHAeS26BeccmjKklhnasFRSJcVBE--r5slqSAOPK3V98P6AWjinCHxb1hILpUl__pzYsi4iljvNPZ0JhMqbvP0NMNL34H2U1oq7BGynGcn8-DGxs54BFoiKAYkvkoo51thbmIgcONbbsq7117cmRMoEtQnvtT33m0jBtUW-vLkVEa6dhlwT_NuqHroLgzTfHI8KXmJgBuREZKPGw5rB4_6kAQTiyBjeLKQTlTZJA9BO1LoBijZDIw6I6uclaFC6FkTD_CIVeouvEvQzQ-GbgdWZEeLBOAs5fDSDkrzFYwzdgAV4_8PtqThMkHGtiGdUDU77hqIOIzV7fFJvLXglc-69-6em9XyVKE6yz8cSC-6QYqTmJootRn_QNVeEmF-stbxop6q5ki25bLSQ4YGq_NGEt3nzRwFqkW2K0Uk1KAX5zRubn2nnfxTqF9Wnn4GrGXMD0IG6RToLfkSXQESopWbl6nhdUtHyYz7UCrOfYk2MlB88oHxWX-V8koWEyL3eDMTVlgjvdIkiPutbq5EOx3KOcLrPnHfMRK21UORQTRmi5_2vahmb8RQyXfUdadXU6qKlYiGFb2vBhXs6EDzzmGRvGe_05ZpdhK7YnVovKerbpJZlBg-bg7t9dnw-VxqTVaD854BAFMkACIygr2dXKyt7wJZN4jbX7Cg1eaB2EqmhtHHpxbu1AWtVDEvkF8hHHcob9IVKTvgL_zbX-ixx9SdoEM9N67F0bc4eTAhg=w301-h617-no?authuser=0);
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
